--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "express-graphql": "0.4.9",
     "graphql": "0.4.17",
     "graphql-relay": "0.3.6",
+    "pg": "^4.5.1",
+    "pg-hstore": "^2.3.2",
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-relay": "0.7.3",
+    "sequelize": "^3.19.3",
     "webpack": "1.12.13",
     "webpack-dev-server": "1.14.1"
   },
