--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-graphql": "0.4.9",
     "graphql": "0.4.17",
     "graphql-relay": "0.3.6",
+    "graphql-sequelize": "^0.21.1",
     "pg": "^4.5.1",
     "pg-hstore": "^2.3.2",
     "react": "0.14.7",
