--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg-hstore": "^2.3.2",
     "react": "0.14.7",
     "react-dom": "0.14.7",
+    "react-google-maps": "^4.9.1",
     "react-relay": "0.7.3",
     "sequelize": "^3.19.3",
     "webpack": "1.12.13",
